# sagittarius_arm_ros

./: .gitignore  README.md  install.sh
sagittarius_demo/: moveit_circle_demo.cpp
sagittarius_demo/sagittarius_object_color_detector/: CMakeLists.txt  README.MD  package.xml
sagittarius_demo/sagittarius_puppet_control/: CMakeLists.txt
sagittarius_descriptions/: package.xml  urdf.rviz
sagittarius_descriptions/launch/: description.launch
sagittarius_descriptions/urdf/: sagittarius_descriptions (copy).urdf
sagittarius_moveit/: .setup_assistant  CMakeLists.txt  package.xml
sagittarius_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sagittarius_arm.srdf
sagittarius_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_true.launch  demo_true_norviz.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sagittarius_arm_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sagittarius_toolboxes/sagittarius_common_modules/: CMakeLists.txt  package.xml  setup.py
sagittarius_toolboxes/sagittarius_perception_toolbox/: CMakeLists.txt  package.xml  setup.py
sdk_sagittarius_arm/: CMakeLists.txt
sdk_sagittarius_arm/cfg/: SDKSagittariusArm.cfg  sagittarius.yaml
(+43 files in other folders)
