<?xml version="1.0"?>
<package format="2">
  <name>sagittarius_common_modules</name>
  <version>0.0.0</version>
  <description>The sagittarius_common_modules package</description>
  <maintainer email="hi@nxrobo.com">litian.zhuang</maintainer>
  <license>BSD</license>
  <author email="litian.zhuang@nxrobo.com">litian.zhuang</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
